# wildlife-sighting

backend/: .editorconfig  .flake8  Makefile  pyproject.toml
backend/core/: settings.py  urls.py
backend/wildlife/: admin.py  models.py  serializers.py  urls.py  views.py
backend/wildlife/migrations/: 0001_initial.py  0002_alter_sightings_sighting_datetime.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: NavigationBar.js
