[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["okellomano <onyandookello@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
django-cors-headers = "^4.0.0"
django-filter = "^23.2"
django-environ = "^0.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
